<resources>
    <string name="app_name">LoginAndRegisterApp</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="lastname">LASTNAME</string>
    <string name="register">REGISTER</string>
    <string name="error">An error has occurred</string>
    <string name="success">successfully registered</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello </string>
    <string name="date">DATE</string>
    <string name="clear_all_fields">CLEAR ALL FIELDS</string>
    <string name="fill_up_fields">FILL UP FIELDS</string>
</resources>