<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username_register"
            style="@style/myDrawableImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_rename_24"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/et_pass_register"
            style="@style/myDrawableImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_24"

            android:hint="@string/password" />

        <EditText
            android:id="@+id/et_firstName_register"
            style="@style/myDrawableImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_firstname_alt_24"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/et_lastName_register"
            style="@style/myDrawableImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_familyname_24"
            android:hint="@string/lastname" />

        <Button
            android:id="@+id/btn_register"
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>

</ScrollView>