<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/logo_cs_light"
        app:tint="@color/purple_700" />

    <EditText
        android:id="@+id/et_username_login"
        style="@style/myDrawableImage"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_rename_24"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_pass_login"
        style="@style/myDrawableImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password_24"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        android:textColor="@color/purple_500" />

</LinearLayout>